# UnityTinyEXR

./: .gitignore  LICENSE.txt  README.md  THIRD_PARTY_NOTICES.txt
TinyExr/: TinyExr.cs
native/: CMakeLists.txt
native/src/: CMakeLists.txt  tinyexr.def  tinyexr_wrapper.cpp
